public/main.css
body, html{
  min-width: 250px;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/*****************layout start**************************/
.layout{
  display: flex;
  flex-direction: column;
}

.headlines,
.content {
  margin: 40px;
}

.headlines {
 margin-bottom: 0;
 margin-top: 10px;
}

.content{
margin-top: 0;
}

.form{
  /* display: grid;
  grid-template-columns: 1fr 1fr; */
}

.form > input{
  /* grid-template-rows: 2; */
  /* width: 200px; */
  /* float: right; */
  /* margin-bottom: 10px; */
}

.form > label{
  width: 100px;
  /* grid-template-rows: 1; */
  /* float: left; */
}

.form > * {
  /* margin-bottom: 1em; */
}

.submit{
  font-size: 15px;
}
.link{
  display: block;
  font-size: 20px;
  margin-top: 15px;
}

.information{
  margin-top: 25px;
}

/*****************layout end**************************/

/*****************border start**************************/

.border-container {
  /* background-color: rgb(243, 241, 241, 0.5);  */
  min-width: 300px;
  position: absolute;
  box-shadow: 0 0 0 5px #f672e5;
  /* outline: dashed 5px rgb(209, 248, 16); */
  outline: dashed 5px white;
  top:15px;
  left: 15px;
  right: 15px;
  min-height: calc(100vh - 25px);
}

.border-container:before {
  /* background-color: rgba(227, 248, 121, 0.4); */
  background-color: rgb(230, 248, 219);
  content: " ";
  position: absolute;
  z-index: -1;
  top:-7px;
  left:-7px;
  bottom: -7px;
  right: -7px;
  border: 9px solid rgb(0, 0, 0);
}

@media (min-width: 670px) {

  .border-container {
    animation: 2s bordermove 3;
  }

  @keyframes bordermove{
    50%{
      /* box-shadow: 0 0 0 5px rgb(209, 248, 16); */
      box-shadow: 0 0 0 5px white;
      outline: dashed 5px #f672e5;
    }
    100%{
      box-shadow: 0 0 0 5px #f672e5;
      /* outline: dashed 5px rgb(209, 248, 16); */
      outline: dashed 5px white;
    }
  }
}

/*****************border end**************************/


/*************************index.ejs******************************/
.grid{
  display: grid;
  grid-template-columns: 1fr;
  margin: 0 40px 30px 40px;
}

.headline-index{
 margin-left: 0;
}

.h3-index{
 margin-top: 30px;
 margin-bottom: 0;
}

.h2-index{
  margin-top: 30px;
  margin-bottom: 8px;
}

.roomContainer{
  padding-left: 0;
  margin-top: 10px;
  margin-bottom: 0px;
  display: grid;
  grid-template-columns: 40px 1fr;
  row-gap: 8px;
}

.form-newRoom{
  display: grid;
  grid-template-columns: 1fr;
  width: 60%;
  row-gap: 10px;
  margin-top: 30px;
}

.form-newRoom-submit{
  width: 120px;
}

.listUserNames{
  margin-bottom: 0;
  margin-top: 5px;
}

.grid-details{
  width: 80%;
}

.ol-index{
  padding-left: 15px;
}

@media (min-width: 670px) {

  .grid{
    grid-template-columns: 1fr 1.5fr;
  }

  .div-roomContainer{
    grid-area: 2 / 1 / 5 / 2;
  }

  .div-userSignedIn{
    grid-area: 4 / 2 / 5 / 4; 
    
  }

  .logout{
    grid-area: 2 / 2 / 3 / 3;
    
  }

  .listUserNames{
    margin-left: -20px;
  }

  .form-newRoom{
    grid-area: 3 / 2 / 4 / 3; 
    display: inline-block;
    border: 1px solid green;
    padding: 10px
  }

  .form-newRoom > input {
    margin-top: 20px;;
    max-width: 200px;
    height: 20px;
  }

  .grid-details{
    grid-column: 1 / span 2;
  }

  .h1-index{
    margin-bottom: 0px
  }
}

@media (min-width: 1600px) { 

  .grid{
    grid-template-columns: 1fr 3fr;
  }
}


/*************************register******************************/
.container-register{
  padding: 30px 40px;
}

.h1-register{
  margin-top: 0;
}

/***************************form****************************************/

input{
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
  resize: vertical;
}

label {
  width: 200px;
  padding: 12px 12px 12px 0;
  display: inline-block;
}

.logout-btn-index{
  margin-top: 30px;

}

.logout-btn-index,
input[type=submit] {
  background-color: #04AA6D;
  color: white;
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

input[type=submit]:hover {
  background-color: #45a049;
}

.container {
  border-radius: 5px;
  background-color: #f2f2f2;
  padding: 20px;
}

.col-25 {
  float: left;
  width: 25%;
  max-width: 200px;
  margin-top: 6px;
}

.col-75 {
  float: left;
  width: 60%;
  margin-top: 6px;
}

/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
}

.adjust-label{
  margin-top: 0px;
}

.row-adjust-newRoom{
  margin-top: -5px;
  display: flex;
  flex-direction: column;
  width: 150px;
}

.adjust-form{
  width: 250px;
}

@media screen and (max-width: 670px) {

  input{
    width: 186px;
  }

  .col-25, .col-75, input[type=submit] {

    width: 214px;
    margin-top: 0;
    margin-right: 10px;
  }
}

